fix: Fixed the members Cards on small screens

--- a/src/AboutUs/AboutUs.css
+++ b/src/AboutUs/AboutUs.css
@@ -22,12 +22,14 @@
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   z-index: 1;
   position: relative;
 }
+
 .aboutUsText p{
   font-family: "Quicksand";
+  display: flex;
   font-weight: bold;
   color: var(--color1);
   border-radius: 0.5rem;
@@ -44,9 +46,10 @@
 
 #membersButton{
   display: none;
+  position: relative;
 }
 
-div.aboutUsContent div.glassCards#MembersCard{
+div.glassCards#MembersCard{
   position: absolute;
   top: -20vh;
   padding: 3vw;
@@ -55,7 +58,7 @@ div.aboutUsContent div.glassCards#MembersCard{
   width: 27vw;
   right: 0vw;
 }
-div.aboutUsContent div.glassCards#MembersCard> div.membersList{
+div.glassCards#MembersCard> div.membersList{
   transition: all .2s;
   overflow: hidden;
   display: flex;
@@ -78,10 +81,10 @@ div.aboutUsContent div.glassCards#MembersCard> div.membersList{
   width: fit-content;
 }
 
-div.aboutUsContent div.glassCards#MembersCard.shorter{
+div.glassCards#MembersCard.shorter{
   animation: slideIn .5s ease-in forwards;
 }
-div.aboutUsContent div.glassCards#MembersCard.larger{
+div.glassCards#MembersCard.larger{
   animation: slideOut 1s ease forwards;
 }
 
@@ -105,22 +108,14 @@ div.aboutUsContent div.glassCards#MembersCard.larger{
   .aboutUsContent{
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .aboutUsContent .aboutUsText{
     width: 100%;
   }
-  div.aboutUsContent>div.glassCards#MembersCard{
-    position: static;
-    margin: auto;
-    max-width: 100vw;
-    width: 60vw;
-    height: 100vh;
-    overflow: scroll;
-    margin-top: 20vw;
-  }
 
-  div.aboutUsContent div.glassCards#MembersCard> div.membersList{
+  div.glassCards#MembersCard> div.membersList{
     overflow: scroll;
     flex-direction: row;
     align-items: center;
@@ -130,11 +125,23 @@ div.aboutUsContent div.glassCards#MembersCard.larger{
     gap: 0.5rem;
   }
 
-  div.aboutUsContent>div.glassCards#MembersCard> div.membersList > .tablet{
+  div.glassCards#MembersCard> div.membersList > .tablet{
     width: 100%;
   }
   .tablet.showMore{
     display: none;
+  }
+
+  div.aboutUsContent div.glassCards#MembersCard{
+    opacity: 0;
+    top: -20vh;
+    margin: 0;
+    right: 0vw;
+    width: 70vw;
+    transition: all .2s;
+  }
+  #membersButton{
+    display: flex;
   }
 
   @keyframes slideOut {
@@ -154,26 +161,11 @@ div.aboutUsContent div.glassCards#MembersCard.larger{
 
 }
 @media (max-width: 650px){
-  #membersButton{
-    background-color: var(--color4aA);
-    color: var(--color1);
-    border: 3px solid var(--color1a);
-    transition: 0.2s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  #membersButton:hover{
-    background-color: var(--color1a);
-    padding-left: 1vw;
-    padding-left: 1vw;
-  }
-  img{
+  .aboutUs img{
     display: none;
   }
-  #MembersCard{
+  .glassCards#image{
     display: none;
-    width: 90vw;
   }
 
 }
